refactor: Principal class to ConsoleApplication class